--- a/RecruitCatkudumusr/Pages/Index.cshtml
+++ b/RecruitCatkudumusr/Pages/Index.cshtml
@@ -4,7 +4,41 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="jumbotron text-center">
+    <h1>Welcome to RecruitCatkudumusr Website</h1>
+    <p>Your trusted recruiting partner for your needs!</p>
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <h2>Our Services</h2>
+        <p>We offer personalized recruiting solutions to find the best talent with the roles that fit your company.</p>
+    </div>
+    <div class="col-md-6">
+        <h2>Industries We Specialize In</h2>
+        <p>Tech, Healthcare, Finance, and many more</p>
+    </div>
+</div>
+
+
+<div class="row mt-4">
+    <div class="col-md-4">
+        <h3>Address</h3>
+        <p>2511 Parker St, Berkeley, 94704, USA</p>
+    </div>
+    <div class ="col-md-4">
+        <h3>Phone Number</h3>
+        <p>(510) 975-7140</p>
+    </div>
+    <div class ="col-md-4">
+        <h3>Testimonials</h3>
+        <p>"Recruitcat was my first job and it connected me with alot of great people!" - David Wolf</p>
+    </div>
+</div>
+
+<div class="row mt-4">
+    <div class="col-md-12">
+        <h3>How to Apply</h3>
+        <p>Visit our Apply page and submit your resume and let our team handle the rest!</p>
+    </div>
 </div>
