added images to homepage

--- a/RecruitCatkudumusr/Pages/Index.cshtml
+++ b/RecruitCatkudumusr/Pages/Index.cshtml
@@ -7,6 +7,11 @@
 <div class="jumbotron text-center">
     <h1>Welcome to RecruitCatkudumusr Website</h1>
     <p>Your trusted recruiting partner for your needs!</p>
+    <a href="/OurTeam" class="btn btn-light btn-lg">Meet Our Team</a>
+</div>
+
+<div class="col-md-4">
+    <img src="https://i.ibb.co/1vHv8Py/homepage.jpg" class ="img-fluid" alt="Recruitment" style="max-height: 300px; width: auto;" />
 </div>
 
 <div class="row">
